test/tools/panc/typecheck/IncorrectWiring1.out
typecheck/IncorrectWiring1.java:16: error: incompatible types
    c2("Wrong");
       ^
  required: int
  found: String
1 error
